apps/homectl/homectl-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homectl-server
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: "homectl-server-settings"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homectl-server
  template:
    metadata:
      labels:
        app: homectl-server
    spec:
      volumes:
        - name: homectl-server-settings
          secret:
            secretName: homectl-server-settings

      containers:
        - name: homectl-server
          image: ghcr.io/fruitiex/homectl-server:main@sha256:260c22131e7d5aa6aeaf9d2e2a3fcbdd4375f56d9db8de12e6585e5cb429ef53
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          workingDir: /app
          volumeMounts:
            - mountPath: /app
              name: homectl-server-settings
