apps/homectl/homectl-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homectl-server
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homectl-server,homectl-server.localdomain
spec:
  type: LoadBalancer
  selector:
    app: homectl-server
  ports:
  - name: homectl-server
    protocol: TCP
    port: 45289
    targetPort: 45289
